Refactoring changes